<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathBomb</string>
    <string name="action_settings">Settings</string>
    <string name="score">Score: </string>
    <string name="timeleft">Time Left: </string>
    <string name="highscore">High Score: </string>
    <string name="highscoretitle">HIGH SCORE</string>
    <string name="ok">Ok</string>
    <string name="setRange">Choose Range of Numbers: </string>
    <string name="menuplay">Play!</string>
    <string name="menuhighscore">High Score</string>
    <string name="menuhowtoplay">How to Play</string>
    <string name="menusettings">Settings</string>
    <string name="menuexit">Exit</string>
    <string name="defaultvalue">0</string>
    <string name="seconds"> sec(s)</string>
	<string name="gameOver">Game Over!</string>
	<string name="yourscoreis">Your score is </string>
	<string name="noRecord">No Record</string>
</resources>